# merfish-sqi

./: README.md  pyproject.toml
scripts/: cache_mosaic_coords.py  detect_spots_from_zarr.py  napari_check_rings_and_spots.py  run_auc_comparison.bat  run_batch_fovs.bat  run_batch_fovs.py  run_nuclei_seg.py  run_spots.py  run_sqi_from_fov_zarr.py  run_sqi_qc1.py  test_mosaic_orientation.py
sqi/io/: image_io.py  spots_io.py
sqi/qc/: metrics.py  mosaic_coords.py  qc_plots.py  rings.py  valid_mask.py  valid_mask_mosaic.py
sqi/spot_calling/: spotiflow_backend.py
sqi/spot_features/: features.py  quality.py
