[project]
name = "merfish-sqi"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "scikit-image",
  "matplotlib",
  "tifffile",
  "zarr",
  "cellpose",
  "spotiflow",
  "pandas",
  "pyarrow",
]

[tool.setuptools]
packages = [
  "sqi",
  "sqi.io",
  "sqi.qc",
  "sqi.spatial",
  "sqi.spot_calling",
  "sqi.spot_features",
  "segmentation",
]
